CLDR 42 update - plural

--- a/js/data/locale/is/plurals.json
+++ b/js/data/locale/is/plurals.json
@@ -34,9 +34,29 @@
                 ]
             },
             {
-                "neq": [
-                    "t",
-                    0
+                "and": [
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "t",
+                                    10
+                                ]
+                            },
+                            1
+                        ]
+                    },
+                    {
+                        "neq": [
+                            {
+                                "mod": [
+                                    "t",
+                                    100
+                                ]
+                            },
+                            11
+                        ]
+                    }
                 ]
             }
         ]
