--- a/js/data/locale/mt/plurals.json
+++ b/js/data/locale/mt/plurals.json
@@ -16,7 +16,7 @@
                         ]
                     },
                     [
-                        2,
+                        3,
                         10
                     ]
                 ]
@@ -41,6 +41,12 @@
         "eq": [
             "n",
             1
+        ]
+    },
+    "two": {
+        "eq": [
+            "n",
+            2
         ]
     }
 }
