--- a/js/data/locale/ro/plurals.json
+++ b/js/data/locale/ro/plurals.json
@@ -14,17 +14,27 @@
                 ]
             },
             {
-                "eq": [
+                "and": [
                     {
-                        "mod": [
+                        "neq": [
                             "n",
-                            100
+                            1
                         ]
                     },
-                    [
-                        2,
-                        19
-                    ]
+                    {
+                        "eq": [
+                            {
+                                "mod": [
+                                    "n",
+                                    100
+                                ]
+                            },
+                            [
+                                1,
+                                19
+                            ]
+                        ]
+                    }
                 ]
             }
         ]
