CLDR 42 update - list

--- a/js/data/locale/ff/Adlm/list.json
+++ b/js/data/locale/ff/Adlm/list.json
@@ -1,26 +1,26 @@
 {
     "or": {
         "full": {
-            "2": "{0} 𞤥𞤢𞥄 {1}",
-            "end": "{0}⹁ 𞤥𞤢𞥄 {1}",
+            "2": "{0} 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
+            "end": "{0}⹁ 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         },
         "long": {
-            "2": "{0} 𞤥𞤢𞥄 {1}",
-            "end": "{0}⹁ 𞤥𞤢𞥄 {1}",
+            "2": "{0} 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
+            "end": "{0}⹁ 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         },
         "medium": {
-            "2": "{0} 𞤥𞤢𞥄 {1}",
-            "end": "{0}⹁ 𞤥𞤢𞥄 {1}",
+            "2": "{0} 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
+            "end": "{0}⹁ 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         },
         "short": {
-            "2": "{0} 𞤥𞤢𞥄 {1}",
-            "end": "{0}⹁ 𞤥𞤢𞥄 {1}",
+            "2": "{0} 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
+            "end": "{0}⹁ 𞤥𞤢𞥄𞤯𞤵𞤲 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         }
@@ -28,13 +28,13 @@
     "standard": {
         "full": {
             "2": "{0} 𞤫 {1}",
-            "end": "{0}⹁ {1}",
+            "end": "{0}⹁ 𞤫 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         },
         "long": {
             "2": "{0} 𞤫 {1}",
-            "end": "{0}⹁ {1}",
+            "end": "{0}⹁ 𞤫 {1}",
             "middle": "{0}⹁ {1}",
             "start": "{0}⹁ {1}"
         },
@@ -67,7 +67,10 @@
             "start": "{0}⹁ {1}"
         },
         "short": {
-            "2": "{0} {1}"
+            "2": "{0} {1}",
+            "end": "{0} {1}",
+            "middle": "{0} {1}",
+            "start": "{0} {1}"
         }
     }
 }
