--- a/js/data/locale/ga/list.json
+++ b/js/data/locale/ga/list.json
@@ -2,11 +2,11 @@
     "or": {
         "full": {
             "2": "{0} nó {1}",
-            "end": "{0}, nó {1}"
+            "end": "{0} nó {1}"
         },
         "long": {
             "2": "{0} nó {1}",
-            "end": "{0}, nó {1}"
+            "end": "{0} nó {1}"
         },
         "medium": {
             "2": "{0} nó {1}",
