--- a/js/data/locale/he/list.json
+++ b/js/data/locale/he/list.json
@@ -2,11 +2,11 @@
     "or": {
         "full": {
             "2": "{0} או {1}",
-            "end": "{0}, או {1}"
+            "end": "{0} או {1}"
         },
         "long": {
             "2": "{0} או {1}",
-            "end": "{0}, או {1}"
+            "end": "{0} או {1}"
         },
         "medium": {
             "2": "{0} או {1}",
@@ -37,10 +37,10 @@
     },
     "unit": {
         "full": {
-            "end": "{0} ו{1}"
+            "end": "{0} ו-{1}"
         },
         "long": {
-            "end": "{0} ו{1}"
+            "end": "{0} ו-{1}"
         },
         "short": {
             "2": "{0} {1}",
