--- a/js/data/locale/hi/Latn/list.json
+++ b/js/data/locale/hi/Latn/list.json
@@ -1,20 +1,20 @@
 {
     "or": {
         "full": {
-            "2": "{0} ya {1}",
-            "end": "{0} ya {1}"
+            "2": "{0} yaa {1}",
+            "end": "{0} yaa {1}"
         },
         "long": {
-            "2": "{0} ya {1}",
-            "end": "{0} ya {1}"
+            "2": "{0} yaa {1}",
+            "end": "{0} yaa {1}"
         },
         "medium": {
-            "2": "{0} ya {1}",
-            "end": "{0} or {1}"
+            "2": "{0} yaa {1}",
+            "end": "{0} yaa {1}"
         },
         "short": {
-            "2": "{0} ya {1}",
-            "end": "{0} or {1}"
+            "2": "{0} yaa {1}",
+            "end": "{0} yaa {1}"
         }
     },
     "standard": {
@@ -28,11 +28,11 @@
         },
         "medium": {
             "2": "{0} aur {1}",
-            "end": "{0} aur {1}"
+            "end": "{0}, aur {1}"
         },
         "short": {
             "2": "{0} aur {1}",
-            "end": "{0} aur {1}"
+            "end": "{0}, {1}"
         }
     },
     "unit": {
