--- a/js/data/locale/ca/list.json
+++ b/js/data/locale/ca/list.json
@@ -29,6 +29,10 @@
         "medium": {
             "2": "{0} i {1}",
             "end": "{0} i {1}"
+        },
+        "short": {
+            "2": "{0} i {1}",
+            "end": "{0} i {1}"
         }
     },
     "unit": {
