--- a/js/data/locale/zh/Hant/list.json
+++ b/js/data/locale/zh/Hant/list.json
@@ -1,4 +1,10 @@
 {
+    "standard": {
+        "short": {
+            "2": "{0}和{1}",
+            "end": "{0}和{1}"
+        }
+    },
     "unit": {
         "full": {
             "2": "{0} {1}",
