--- a/js/data/locale/zh/list.json
+++ b/js/data/locale/zh/list.json
@@ -45,8 +45,8 @@
             "start": "{0}、{1}"
         },
         "short": {
-            "2": "{0}和{1}",
-            "end": "{0}和{1}",
+            "2": "{0}、{1}",
+            "end": "{0}、{1}",
             "middle": "{0}、{1}",
             "start": "{0}、{1}"
         }
