Add zh/ hardcode data regarding  and  data

--- a/js/data/locale/zh/sysres.json
+++ b/js/data/locale/zh/sysres.json
@@ -163,10 +163,10 @@
     "azh6": "晚上",
     "durationLongDays": "#{num}天",
     "durationMediumHours": "#{num}小时",
-    "durationMediumMillis": "#{num}ms",
+    "durationMediumMillis": "#{num}毫秒",
     "durationMediumWeeks": "#{num}周",
     "durationMediumYears": "#{num}年",
-    "durationShortMillis": "#{num}ms",
+    "durationShortMillis": "#{num}毫秒",
     "durationShortMinutes": "#{num}分钟",
     "durationShortMonths": "#{num}个月",
     "finalSeparatorFull": "",
