Fix datefmtrange test fail cases

--- a/js/data/locale/eu/dateformats.json
+++ b/js/data/locale/eu/dateformats.json
@@ -99,8 +99,8 @@
         },
         "range": {
             "c00": {
-                "f": "{sy}(e)ko {sm}ren {sd}(a) ({st}) – {et}",
-                "l": "{sy}(e)ko {sm}ren {sd}(a) ({st}) – {et}",
+                "f": "{sy}(e)ko {sm}ren {sd}(a) ({st}) – ({et})",
+                "l": "{sy}(e)ko {sm}ren {sd}(a) ({st}) – ({et})",
                 "m": "{sy}(e)ko {sm} {sd}(a), {st} – {et}",
                 "s": "{sy}/{sm}/{sd}, {st} – {et}"
             },
