Add pseulocale to localematch.json

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -909,6 +909,7 @@
         "alt-RU": "alt-Cyrl-RU",
         "am": "am-Ethi-ET",
         "am-ET": "am-Ethi-ET",
+        "am-XX": "am-Ethi-XX",
         "am-Ethi": "am-Ethi-ET",
         "amm": "amm-Latn-ZZ",
         "amm-Latn": "amm-Latn-ZZ",
@@ -1017,6 +1018,7 @@
         "arz-Arab": "arz-Arab-EG",
         "arz-EG": "arz-Arab-EG",
         "as": "as-Beng-IN",
+        "as-XX": "as-Beng-XX",
         "as-Beng": "as-Beng-IN",
         "as-IN": "as-Beng-IN",
         "asa": "asa-Latn-TZ",
@@ -1321,6 +1323,7 @@
         "bn-BD": "bn-Beng-BD",
         "bn-Beng": "bn-Beng-BD",
         "bn-IN": "bn-Beng-IN",
+        "bn-XX": "bn-Beng-XX",
         "bng": "bng-Latn-ZZ",
         "bng-Latn": "bng-Latn-ZZ",
         "bng-ZZ": "bng-Latn-ZZ",
@@ -2282,6 +2285,7 @@
         "gu": "gu-Gujr-IN",
         "gu-Gujr": "gu-Gujr-IN",
         "gu-IN": "gu-Gujr-IN",
+        "gu-XX": "gu-Gujr-XX",
         "gub": "gub-Latn-BR",
         "gub-BR": "gub-Latn-BR",
         "gub-Latn": "gub-Latn-BR",
@@ -2363,6 +2367,7 @@
         "hi": "hi-Deva-IN",
         "hi-Deva": "hi-Deva-IN",
         "hi-IN": "hi-Deva-IN",
+        "hi-XX": "hi-Deva-XX",
         "hi-Latn": "hi-Latn-IN",
         "hia": "hia-Latn-ZZ",
         "hia-Latn": "hia-Latn-ZZ",
@@ -2617,6 +2622,7 @@
         "jw-Latn": "jw-Latn-ID",
         "ka": "ka-Geor-GE",
         "ka-GE": "ka-Geor-GE",
+        "ka-XX": "ka-Geor-XX",
         "ka-Geok": "ka-Geok-GE",
         "ka-Geor": "ka-Geor-GE",
         "ka-Gong": "ka-Gong-GE",
@@ -2802,6 +2808,7 @@
         "klx-ZZ": "klx-Latn-ZZ",
         "km": "km-Khmr-KH",
         "km-KH": "km-Khmr-KH",
+        "km-XX": "km-Khmr-XX",
         "km-Khmr": "km-Khmr-KH",
         "kmb": "kmb-Latn-AO",
         "kmb-AO": "kmb-Latn-AO",
@@ -2823,6 +2830,7 @@
         "kmw-ZZ": "kmw-Latn-ZZ",
         "kn": "kn-Knda-IN",
         "kn-IN": "kn-Knda-IN",
+        "kn-XX": "kn-Knda-XX",
         "kn-Knda": "kn-Knda-IN",
         "knf": "knf-Latn-GW",
         "knf-GW": "knf-Latn-GW",
@@ -3400,6 +3408,7 @@
         "mkw-ZZ": "mkw-Latn-ZZ",
         "ml": "ml-Mlym-IN",
         "ml-IN": "ml-Mlym-IN",
+        "ml-XX": "ml-Mlym-XX",
         "ml-Mlym": "ml-Mlym-IN",
         "mle": "mle-Latn-ZZ",
         "mle-Latn": "mle-Latn-ZZ",
@@ -3472,6 +3481,7 @@
         "mr": "mr-Deva-IN",
         "mr-Deva": "mr-Deva-IN",
         "mr-IN": "mr-Deva-IN",
+        "mr-XX": "mr-Deva-XX",
         "mrd": "mrd-Deva-NP",
         "mrd-Deva": "mrd-Deva-NP",
         "mrd-NP": "mrd-Deva-NP",
@@ -3859,6 +3869,7 @@
         "opm-ZZ": "opm-Latn-ZZ",
         "or": "or-Orya-IN",
         "or-IN": "or-Orya-IN",
+        "or-XX": "or-Orya-XX",
         "or-Orya": "or-Orya-IN",
         "oro": "oro-Latn-ZZ",
         "oro-Latn": "oro-Latn-ZZ",
@@ -3888,6 +3899,7 @@
         "pa-Arab": "pa-Arab-PK",
         "pa-Guru": "pa-Guru-IN",
         "pa-IN": "pa-Guru-IN",
+        "pa-XX": "pa-Guru-XX",
         "pa-PK": "pa-Arab-PK",
         "pag": "pag-Latn-PH",
         "pag-Latn": "pag-Latn-PH",
@@ -4247,6 +4259,7 @@
         "shu-ZZ": "shu-Arab-ZZ",
         "si": "si-Sinh-LK",
         "si-LK": "si-Sinh-LK",
+        "si-XX": "si-Sinh-XX",
         "si-Sinh": "si-Sinh-LK",
         "sid": "sid-Latn-ET",
         "sid-ET": "sid-Latn-ET",
@@ -4473,6 +4486,7 @@
         "szl-PL": "szl-Latn-PL",
         "ta": "ta-Taml-IN",
         "ta-IN": "ta-Taml-IN",
+        "ta-XX": "ta-Taml-XX",
         "ta-Taml": "ta-Taml-IN",
         "taj": "taj-Deva-NP",
         "taj-Deva": "taj-Deva-NP",
@@ -4527,6 +4541,7 @@
         "tdu-MY": "tdu-Latn-MY",
         "te": "te-Telu-IN",
         "te-IN": "te-Telu-IN",
+        "te-XX": "te-Telu-XX",
         "te-Telu": "te-Telu-IN",
         "ted": "ted-Latn-ZZ",
         "ted-Latn": "ted-Latn-ZZ",
