--- a/js/data/locale/nb/sysres.json
+++ b/js/data/locale/nb/sysres.json
@@ -151,11 +151,11 @@
     "MMM11": "nov.",
     "MMM12": "des.",
     "MMM2": "feb.",
-    "MMM3": "mar.",
+    "MMM3": "mars",
     "MMM4": "apr.",
     "MMM5": "mai",
-    "MMM6": "jun.",
-    "MMM7": "jul.",
+    "MMM6": "juni",
+    "MMM7": "juli",
     "MMM8": "aug.",
     "MMM9": "sep.",
     "MMMM1": "januar",
