--- a/js/data/locale/pl/sysres.json
+++ b/js/data/locale/pl/sysres.json
@@ -6,7 +6,7 @@
     "#in {num}s": "one#za {num} sek.|few#za {num} sek.|many#za {num} sek.|#za {num} sek.",
     "#in {num}w": "one#za {num} tydz.|few#za {num} tyg.|many#za {num} tyg.|#za {num} tyg.",
     "#in {num}y": "one#za {num} rok|few#za {num} lata|many#za {num} lat|#za {num} roku",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
     "#{num}d": "one#{num} d.|few#{num} d.|many#{num} d.|#{num} d.",
     "#{num}d ago": "one#{num} dzień temu|few#{num} dni temu|many#{num} dni temu|#{num} dnia temu",
     "#{num}h": "one#{num} h|few#{num} h|many#{num} h|#{num} h",
@@ -31,8 +31,8 @@
     "1#1 min ago|#{num} min ago": "one#{num} minutę temu|few#{num} minuty temu|many#{num} minut temu|#{num} minuty temu",
     "1#1 minute ago|#{num} minutes ago": "one#{num} minutę temu|few#{num} minuty temu|many#{num} minut temu|#{num} minuty temu",
     "1#1 minute|#{num} minutes": "one#{num} minuta|few#{num} minuty|many#{num} minut|#{num} minuty",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 mi|#{num} min": "#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|few#{num} min|many#{num} min|#{num} min",
+    "1#1 mi|#{num} min": "one#{num} min|few#{num} min|many#{num} min|#{num} min",
     "1#1 mon ago|#{num} mons ago": "one#{num} miesiąc temu|few#{num} miesiące temu|many#{num} miesięcy temu|#{num} miesiąca temu",
     "1#1 month ago|#{num} months ago": "one#{num} miesiąc temu|few#{num} miesiące temu|many#{num} miesięcy temu|#{num} miesiąca temu",
     "1#1 month|#{num} months": "one#{num} miesiąc|few#{num} miesiące|many#{num} miesięcy|#{num} miesiąca",
@@ -228,11 +228,11 @@
     "cccc6": "sobota",
     "durationLongDays": "one#{num} doba|few#{num} doby|many#{num} dób|#{num} doby",
     "durationMediumHours": "one#{num} h|few#{num} h|many#{num} h|#{num} h",
-    "durationMediumMillis": "#{num} ms",
+    "durationMediumMillis": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
     "durationMediumWeeks": "one#{num} tydz.|few#{num} t.|many#{num} tyg.|#{num} tyg.",
     "durationMediumYears": "one#{num} r.|few#{num} l.|many#{num} l.|#{num} r.",
-    "durationShortMillis": "#{num} ms",
-    "durationShortMinutes": "#{num} min",
+    "durationShortMillis": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
+    "durationShortMinutes": "one#{num} min|few#{num} min|many#{num} min|#{num} min",
     "durationShortMonths": "one#{num} m-c|few#{num} m-ce|many#{num} m-cy|#{num} m-ca",
     "finalSeparatorFull": " i ",
     "finalSeparatorLong": " i ",
