--- a/js/data/locale/sc/sysres.json
+++ b/js/data/locale/sc/sysres.json
@@ -6,7 +6,7 @@
     "#in {num}s": "one#intro de {num} seg.|#intro de {num} seg.",
     "#in {num}w": "one#intro de {num} ch.|#intro de {num} ch.",
     "#in {num}y": "one#intro de {num} annu|#intro de {num} annos",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|#{num} ms",
     "#{num}d": "one#{num}d|#{num}d",
     "#{num}d ago": "one#{num} die a como|#{num} dies a como",
     "#{num}h": "one#{num}o|#{num}o",
@@ -31,7 +31,7 @@
     "1#1 min ago|#{num} min ago": "one#{num} minutu a como|#{num} minutos a como",
     "1#1 minute ago|#{num} minutes ago": "one#{num} minutu a como|#{num} minutos a como",
     "1#1 minute|#{num} minutes": "one#{num} minutu|#{num} minutos",
-    "1#1 min|#{num} min": "#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|#{num} min",
     "1#1 mi|#{num} min": "one#{num}m|#{num}m",
     "1#1 mon ago|#{num} mons ago": "one#{num} mese a como|#{num} meses a como",
     "1#1 month ago|#{num} months ago": "one#{num} mese a como|#{num} meses a como",
