--- a/js/data/locale/ti/sysres.json
+++ b/js/data/locale/ti/sysres.json
@@ -6,51 +6,51 @@
     "#in {num}s": "one#ኣብ {num} ካልኢት|#ኣብ {num} ካልኢት",
     "#in {num}w": "one#ኣብ {num} ሰሙን|#ኣብ {num} ሰሙን",
     "#in {num}y": "one#ኣብ {num} ዓ|#ኣብ {num} ዓ",
-    "#{num} ms": "#{num} ms",
-    "#{num}d": "#{num} d",
+    "#{num} ms": "one#{num} ms|#{num} ms",
+    "#{num}d": "one#{num} d|#{num} d",
     "#{num}d ago": "one#ቅድሚ {num} መዓልቲ|#ቅድሚ {num} መዓልቲ",
-    "#{num}h": "#{num} h",
+    "#{num}h": "one#{num} h|#{num} h",
     "#{num}h ago": "one#ቅድሚ {num} ሰዓት|#ቅድሚ {num} ሰዓት",
     "#{num}mi ago": "one#ቅድሚ {num} ደቒቕ|#ቅድሚ {num} ደቒቕ",
     "#{num}mo ago": "one#ቅድሚ {num} ወርሒ|#ቅድሚ {num} ወርሒ",
-    "#{num}s": "#{num} s",
+    "#{num}s": "one#{num} s|#{num} s",
     "#{num}s ago": "one#ቅድሚ {num} ካልኢት|#ቅድሚ {num} ካልኢት",
-    "#{num}w": "#{num} w",
+    "#{num}w": "one#{num} w|#{num} w",
     "#{num}w ago": "one#ቅድሚ {num} ሰሙን|#ቅድሚ {num} ሰሙን",
-    "#{num}y": "#{num} y",
+    "#{num}y": "one#{num} y|#{num} y",
     "#{num}y ago": "one#ቅድሚ -{num} ዓ|#ቅድሚ {num} ዓ",
     "1#1 day ago|#{num} days ago": "one#ቅድሚ {num} መዓልቲ|#ኣብ {num} መዓልቲ",
-    "1#1 day|#{num} days": "#{num} d",
+    "1#1 day|#{num} days": "one#{num} d|#{num} d",
     "1#1 dy ago|#{num} dys ago": "one#ቅድሚ {num} መዓልቲ|#ኣብ {num} መዓልቲ",
-    "1#1 dy|#{num} dys": "#{num} d",
+    "1#1 dy|#{num} dys": "one#{num} d|#{num} d",
     "1#1 hour ago|#{num} hours ago": "one#ቅድሚ {num} ሰዓት|#ቅድሚ {num} ሰዓት",
-    "1#1 hour|#{num} hours": "#{num} h",
+    "1#1 hour|#{num} hours": "one#{num} h|#{num} h",
     "1#1 hr ago|#{num} hrs ago": "one#ቅድሚ {num} ሰዓት|#ቅድሚ {num} ሰዓት",
-    "1#1 hr|#{num} hrs": "#{num} h",
-    "1#1 millisecond|#{num} milliseconds": "#{num} ms",
+    "1#1 hr|#{num} hrs": "one#{num} h|#{num} h",
+    "1#1 millisecond|#{num} milliseconds": "one#{num} ms|#{num} ms",
     "1#1 min ago|#{num} min ago": "one#ቅድሚ {num} ደቒቕ|#ቅድሚ {num} ደቒቕ",
     "1#1 minute ago|#{num} minutes ago": "one#ቅድሚ {num} ደቒቕ|#ቅድሚ {num} ደቒቕ",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 mi|#{num} min": "#{num} min",
+    "1#1 minute|#{num} minutes": "one#{num} min|#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|#{num} min",
+    "1#1 mi|#{num} min": "one#{num} min|#{num} min",
     "1#1 mon ago|#{num} mons ago": "one#ቅድሚ {num} ወርሒ|#ቅድሚ {num} ወርሒ",
     "1#1 month ago|#{num} months ago": "one#ቅድሚ {num} ወርሒ|#ቅድሚ {num} ወርሒ",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 mon|#{num} mons": "#{num} m",
-    "1#1 mo|#{num} mos": "#{num} m",
+    "1#1 month|#{num} months": "one#{num} m|#{num} m",
+    "1#1 mon|#{num} mons": "one#{num} m|#{num} m",
+    "1#1 mo|#{num} mos": "one#{num} m|#{num} m",
     "1#1 sec ago|#{num} sec ago": "one#ቅድሚ {num} ካልኢት|#ቅድሚ {num} ካልኢት",
     "1#1 second ago|#{num} seconds ago": "one#ቅድሚ {num} ካልኢት|#ቅድሚ {num} ካልኢት",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 sec|#{num} sec": "#{num} s",
-    "1#1 se|#{num} sec": "#{num} s",
+    "1#1 second|#{num} seconds": "one#{num} s|#{num} s",
+    "1#1 sec|#{num} sec": "one#{num} s|#{num} s",
+    "1#1 se|#{num} sec": "one#{num} s|#{num} s",
     "1#1 week ago|#{num} weeks ago": "one#ቅድሚ {num} ሰሙን|#ቅድሚ {num} ሰሙን",
-    "1#1 week|#{num} weeks": "#{num} w",
+    "1#1 week|#{num} weeks": "one#{num} w|#{num} w",
     "1#1 wk ago|#{num} wks ago": "one#ቅድሚ {num} ሰሙን|#ቅድሚ {num} ሰሙን",
-    "1#1 wk|#{num} wks": "#{num} w",
+    "1#1 wk|#{num} wks": "one#{num} w|#{num} w",
     "1#1 year ago|#{num} years ago": "one#ቅድሚ {num} ዓ|#ቅድሚ {num} ዓ",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 year|#{num} years": "one#{num} y|#{num} y",
     "1#1 yr ago|#{num} yrs ago": "one#ቅድሚ {num} ዓ|#ቅድሚ {num} ዓ",
-    "1#1 yr|#{num} yrs": "#{num} y",
+    "1#1 yr|#{num} yrs": "one#{num} y|#{num} y",
     "1#in 1 day|#in {num} days": "one#ኣብ {num} መዓልቲ|#ኣብ {num} መዓልቲ",
     "1#in 1 dy|#in {num} dys": "one#ኣብ {num} መዓልቲ|#ኣብ {num} መዓልቲ",
     "1#in 1 hour|#in {num} hours": "one#ኣብ {num} ሰዓት|#ኣብ {num} ሰዓት",
@@ -145,14 +145,14 @@
     "NN9": "መስ",
     "a0": "ቅ.ቀ.",
     "a1": "ድ.ቀ.",
-    "durationLongDays": "#{num} d",
-    "durationMediumHours": "#{num} h",
-    "durationMediumMillis": "#{num} ms",
-    "durationMediumWeeks": "#{num} w",
-    "durationMediumYears": "#{num} y",
-    "durationShortMillis": "#{num} ms",
-    "durationShortMinutes": "#{num} min",
-    "durationShortMonths": "#{num} m",
+    "durationLongDays": "one#{num} d|#{num} d",
+    "durationMediumHours": "one#{num} h|#{num} h",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
+    "durationMediumWeeks": "one#{num} w|#{num} w",
+    "durationMediumYears": "one#{num} y|#{num} y",
+    "durationShortMillis": "one#{num} ms|#{num} ms",
+    "durationShortMinutes": "one#{num} min|#{num} min",
+    "durationShortMonths": "one#{num} m|#{num} m",
     "finalSeparatorFull": "ን ን",
     "finalSeparatorLong": "፣ ",
     "finalSeparatorMedium": "፣ ",
