--- a/js/data/locale/yrl/sysres.json
+++ b/js/data/locale/yrl/sysres.json
@@ -6,10 +6,10 @@
     "#in {num}s": "one#{num} seg. resê|#{num} seg. resê itá",
     "#in {num}w": "one#{num} sẽm. resê|#{num} sẽm. itá resê",
     "#in {num}y": "one#{num} akayú resê|#{num} akayú itá resê",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|#{num} ms",
     "#{num}d": "one#{num} ara|#{num} ara",
     "#{num}d ago": "one#aikué {num} ara|#aikué {num} ara itá",
-    "#{num}h": "#{num} h",
+    "#{num}h": "one#{num} h|#{num} h",
     "#{num}h ago": "one#aikué {num} h|#aikué {num} h itá",
     "#{num}mi ago": "one#aikué {num} min.|#aikué {num} min. itá",
     "#{num}mo ago": "one#aikué {num} yasí|#aikué {num} yasí itá",
@@ -26,13 +26,13 @@
     "1#1 hour ago|#{num} hours ago": "one#aikué {num} hura|#aikué {num} hura itá",
     "1#1 hour|#{num} hours": "one#{num} hura|#{num} hura-ita",
     "1#1 hr ago|#{num} hrs ago": "one#aikué {num} hura|#aikué {num} hura itá",
-    "1#1 hr|#{num} hrs": "#{num} h",
+    "1#1 hr|#{num} hrs": "one#{num} h|#{num} h",
     "1#1 millisecond|#{num} milliseconds": "one#{num} mirisegũdu-ita|#{num} mirisegũdu rupi",
     "1#1 min ago|#{num} min ago": "one#aikué {num} minutu|#aikué {num} minutu itá",
     "1#1 minute ago|#{num} minutes ago": "one#aikué {num} minutu|#aikué {num} minutu itá",
     "1#1 minute|#{num} minutes": "one#{num} minutu|#{num} minutu-ita",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 mi|#{num} min": "#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|#{num} min",
+    "1#1 mi|#{num} min": "one#{num} min|#{num} min",
     "1#1 mon ago|#{num} mons ago": "one#aikué {num} yasí|#aikué {num} yasí itá",
     "1#1 month ago|#{num} months ago": "one#aikué {num} yasí|#aikué {num} yasí itá",
     "1#1 month|#{num} months": "one#{num} yasí|#{num} yasí-ita",
@@ -150,12 +150,12 @@
     "NN8": "ps",
     "NN9": "pi",
     "durationLongDays": "one#{num} ara|#{num} ara",
-    "durationMediumHours": "#{num} h",
-    "durationMediumMillis": "#{num} ms",
+    "durationMediumHours": "one#{num} h|#{num} h",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
     "durationMediumWeeks": "one#{num} sem.|#{num} sem",
     "durationMediumYears": "one#{num} akayú|#{num} akayú",
-    "durationShortMillis": "#{num} ms",
-    "durationShortMinutes": "#{num} min",
+    "durationShortMillis": "one#{num} ms|#{num} ms",
+    "durationShortMinutes": "one#{num} min|#{num} min",
     "durationShortMonths": "one#{num} yasí|#{num} yasí",
     "finalSeparatorFull": " asuí ",
     "finalSeparatorLong": " asuí ",
