--- a/js/data/locale/kgp/sysres.json
+++ b/js/data/locale/kgp/sysres.json
@@ -6,10 +6,10 @@
     "#in {num}s": "one#seg. {num} kar kỹ|#seg. {num} kar kỹ",
     "#in {num}w": "one#sim. {num} kar kỹ|#sim. {num} kar kỹ",
     "#in {num}y": "one#prỹg {num} kar kỹ|#prỹg {num} kar kỹ",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|#{num} ms",
     "#{num}d": "one#{num} kurã|#{num} kurã ag",
     "#{num}d ago": "one#kurã {num} si ser|#kurã {num} si ser",
-    "#{num}h": "#{num} h",
+    "#{num}h": "one#{num} h|#{num} h",
     "#{num}h ago": "one#{num} h si ser|#{num} h si ser",
     "#{num}mi ago": "one#mĩn. {num} si ser|#mĩn. {num} si ser",
     "#{num}mo ago": "one#kysã {num} si ser|#kysã {num} si ser",
@@ -26,13 +26,13 @@
     "1#1 hour ago|#{num} hours ago": "one#óra {num} si ser|#óra {num} si ser",
     "1#1 hour|#{num} hours": "one#óra {num}|#óra ag {num}",
     "1#1 hr ago|#{num} hrs ago": "one#óra {num} si ser|#óra {num} si ser",
-    "1#1 hr|#{num} hrs": "#{num} h",
+    "1#1 hr|#{num} hrs": "one#{num} h|#{num} h",
     "1#1 millisecond|#{num} milliseconds": "one#mĩrisigũnu {num}|#mĩrisigũnu {num}",
     "1#1 min ago|#{num} min ago": "one#mĩnũtu {num} si ser|#mĩnũtu {num} si ser",
     "1#1 minute ago|#{num} minutes ago": "one#mĩnũtu {num} si ser|#mĩnũtu {num} si ser",
     "1#1 minute|#{num} minutes": "one#mĩnũtu {num}|#mĩnũtu {num}",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 mi|#{num} min": "#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|#{num} min",
+    "1#1 mi|#{num} min": "one#{num} min|#{num} min",
     "1#1 mon ago|#{num} mons ago": "one#kysã {num} si ser|#kysã {num} si ser",
     "1#1 month ago|#{num} months ago": "one#kysã {num} si ser|#kysã {num} si ser",
     "1#1 month|#{num} months": "one#kysã {num}|#kysã ag {num}",
@@ -152,12 +152,12 @@
     "NN8": "8K",
     "NN9": "9K",
     "durationLongDays": "one#{num} kurã|#{num} kurã ag",
-    "durationMediumHours": "#{num} h",
-    "durationMediumMillis": "#{num} ms",
+    "durationMediumHours": "one#{num} h|#{num} h",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
     "durationMediumWeeks": "one#{num} sim.|#{num} sim. Ag",
     "durationMediumYears": "one#{num} prỹg|#{num} prỹg ag",
-    "durationShortMillis": "#{num} ms",
-    "durationShortMinutes": "#{num} min",
+    "durationShortMillis": "one#{num} ms|#{num} ms",
+    "durationShortMinutes": "one#{num} min|#{num} min",
     "durationShortMonths": "one#{num} kysã|#{num} kysã ag",
     "finalSeparatorFull": " kar ",
     "finalSeparatorLong": " kar ",
