--- a/js/data/locale/pt/sysres.json
+++ b/js/data/locale/pt/sysres.json
@@ -6,10 +6,10 @@
     "#in {num}s": "one#em {num} seg.|#em {num} seg.",
     "#in {num}w": "one#em {num} sem.|#em {num} sem.",
     "#in {num}y": "one#em {num} ano|#em {num} anos",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|#{num} ms",
     "#{num}d": "one#{num} dia|#{num} dias",
     "#{num}d ago": "one#há {num} dia|#há {num} dias",
-    "#{num}h": "#{num} h",
+    "#{num}h": "one#{num} h|#{num} h",
     "#{num}h ago": "one#há {num} h|#há {num} h",
     "#{num}mi ago": "one#há {num} min.|#há {num} min.",
     "#{num}mo ago": "one#há {num} mês|#há {num} meses",
@@ -26,13 +26,13 @@
     "1#1 hour ago|#{num} hours ago": "one#há {num} hora|#há {num} horas",
     "1#1 hour|#{num} hours": "one#{num} hora|#{num} horas",
     "1#1 hr ago|#{num} hrs ago": "one#há {num} hora|#há {num} horas",
-    "1#1 hr|#{num} hrs": "#{num} h",
+    "1#1 hr|#{num} hrs": "one#{num} h|#{num} h",
     "1#1 millisecond|#{num} milliseconds": "one#{num} milissegundo|#{num} milissegundos",
     "1#1 min ago|#{num} min ago": "one#há {num} minuto|#há {num} minutos",
     "1#1 minute ago|#{num} minutes ago": "one#há {num} minuto|#há {num} minutos",
     "1#1 minute|#{num} minutes": "one#{num} minuto|#{num} minutos",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 mi|#{num} min": "#{num} min",
+    "1#1 min|#{num} min": "one#{num} min|#{num} min",
+    "1#1 mi|#{num} min": "one#{num} min|#{num} min",
     "1#1 mon ago|#{num} mons ago": "one#há {num} mês|#há {num} meses",
     "1#1 month ago|#{num} months ago": "one#há {num} mês|#há {num} meses",
     "1#1 month|#{num} months": "one#{num} mês|#{num} meses",
@@ -150,12 +150,12 @@
     "NN8": "ag",
     "NN9": "se",
     "durationLongDays": "one#{num} dia|#{num} dias",
-    "durationMediumHours": "#{num} h",
-    "durationMediumMillis": "#{num} ms",
+    "durationMediumHours": "one#{num} h|#{num} h",
+    "durationMediumMillis": "one#{num} ms|#{num} ms",
     "durationMediumWeeks": "one#{num} sem.|#{num} sem.",
     "durationMediumYears": "one#{num} ano|#{num} anos",
-    "durationShortMillis": "#{num} ms",
-    "durationShortMinutes": "#{num} min",
+    "durationShortMillis": "one#{num} ms|#{num} ms",
+    "durationShortMinutes": "one#{num} min|#{num} min",
     "durationShortMonths": "one#{num} mês|#{num} meses",
     "finalSeparatorFull": " e ",
     "finalSeparatorLong": " e ",
