--- a/js/data/locale/so/sysres.json
+++ b/js/data/locale/so/sysres.json
@@ -6,7 +6,7 @@
     "#in {num}s": "one#{num} ilbrqsi|#{num} ilbrqsi",
     "#in {num}w": "one#{num} tdbd|#{num} tdbd",
     "#in {num}y": "one#{num} snd|#{num} snd",
-    "#{num} ms": "#{num} ms",
+    "#{num} ms": "one#{num} ms|#{num} ms",
     "#{num}d": "one#{num}m|#{num}m",
     "#{num}d ago": "one#{num} mln khr|#{num} mlmd khr",
     "#{num}h": "one#{num} scd|#{num} s",
