Update to tz2023d data

--- a/js/data/locale/zoneinfo/America/Chihuahua.json
+++ b/js/data/locale/zoneinfo/America/Chihuahua.json
@@ -1,6 +1,6 @@
 {
     "c": "MX",
     "f": "CST",
-    "n": "Mountain {c} Time (Mexico)",
+    "n": "Central {c} Time (Mexico)",
     "o": "-6:0"
 }
