--- a/js/data/locale/zoneinfo/America/Ojinaga.json
+++ b/js/data/locale/zoneinfo/America/Ojinaga.json
@@ -7,7 +7,7 @@
         "t": "2:0"
     },
     "f": "C{c}T",
-    "n": "Mountain {c} Time",
+    "n": "Central {c} Time",
     "o": "-6:0",
     "s": {
         "c": "D",
