Fix tool code for koreand dateformat change

--- a/js/data/locale/ko/dateformats.json
+++ b/js/data/locale/ko/dateformats.json
@@ -80,8 +80,8 @@
                 "s": "d. E"
             },
             "l": {
-                "f": "MMMM월",
-                "l": "MMMM월",
+                "f": "MMMM",
+                "l": "MMMM",
                 "m": "M월",
                 "s": "M월"
             },
