--- a/js/data/locale/ko/sysres.json
+++ b/js/data/locale/ko/sysres.json
@@ -102,54 +102,54 @@
     "EEEE4": "목요일",
     "EEEE5": "금요일",
     "EEEE6": "토요일",
-    "MMM1": "1",
-    "MMM10": "10",
-    "MMM11": "11",
-    "MMM12": "12",
-    "MMM2": "2",
-    "MMM3": "3",
-    "MMM4": "4",
-    "MMM5": "5",
-    "MMM6": "6",
-    "MMM7": "7",
-    "MMM8": "8",
-    "MMM9": "9",
-    "MMMM1": "1",
-    "MMMM10": "10",
-    "MMMM11": "11",
-    "MMMM12": "12",
-    "MMMM2": "2",
-    "MMMM3": "3",
-    "MMMM4": "4",
-    "MMMM5": "5",
-    "MMMM6": "6",
-    "MMMM7": "7",
-    "MMMM8": "8",
-    "MMMM9": "9",
-    "N1": "1",
-    "N10": "10",
-    "N11": "11",
-    "N12": "12",
-    "N2": "2",
-    "N3": "3",
-    "N4": "4",
-    "N5": "5",
-    "N6": "6",
-    "N7": "7",
-    "N8": "8",
-    "N9": "9",
-    "NN1": "1",
-    "NN10": "10",
-    "NN11": "11",
-    "NN12": "12",
-    "NN2": "2",
-    "NN3": "3",
-    "NN4": "4",
-    "NN5": "5",
-    "NN6": "6",
-    "NN7": "7",
-    "NN8": "8",
-    "NN9": "9",
+    "MMM1": "1월",
+    "MMM10": "10월",
+    "MMM11": "11월",
+    "MMM12": "12월",
+    "MMM2": "2월",
+    "MMM3": "3월",
+    "MMM4": "4월",
+    "MMM5": "5월",
+    "MMM6": "6월",
+    "MMM7": "7월",
+    "MMM8": "8월",
+    "MMM9": "9월",
+    "MMMM1": "1월",
+    "MMMM10": "10월",
+    "MMMM11": "11월",
+    "MMMM12": "12월",
+    "MMMM2": "2월",
+    "MMMM3": "3월",
+    "MMMM4": "4월",
+    "MMMM5": "5월",
+    "MMMM6": "6월",
+    "MMMM7": "7월",
+    "MMMM8": "8월",
+    "MMMM9": "9월",
+    "N1": "1월",
+    "N10": "10월",
+    "N11": "11월",
+    "N12": "12월",
+    "N2": "2월",
+    "N3": "3월",
+    "N4": "4월",
+    "N5": "5월",
+    "N6": "6월",
+    "N7": "7월",
+    "N8": "8월",
+    "N9": "9월",
+    "NN1": "1월",
+    "NN10": "10월",
+    "NN11": "11월",
+    "NN12": "12월",
+    "NN2": "2월",
+    "NN3": "3월",
+    "NN4": "4월",
+    "NN5": "5월",
+    "NN6": "6월",
+    "NN7": "7월",
+    "NN8": "8월",
+    "NN9": "9월",
     "a0": "오전",
     "a1": "오후",
     "durationLongDays": "#{num}일",
