Update scripts data to cldr v44.1

--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -1956,11 +1956,6 @@
     [
         "Zyyy",
         12272,
-        12283
-    ],
-    [
-        "Zyyy",
-        12288,
         12292
     ],
     [
@@ -2073,6 +2068,10 @@
         "Zyyy",
         12736,
         12771
+    ],
+    [
+        "Zyyy",
+        12783
     ],
     [
         "Kana",
@@ -4596,6 +4595,11 @@
         "Hani",
         183984,
         191456
+    ],
+    [
+        "Hani",
+        191472,
+        192093
     ],
     [
         "Hani",
