Update list.json data to cldr v44.1

--- a/js/data/locale/syr/list.json
+++ b/js/data/locale/syr/list.json
@@ -1,56 +1,80 @@
 {
     "or": {
         "full": {
-            "2": "{0} ܝܐ {1}",
-            "end": "{0}، ܝܐ {1}"
+            "2": "{0} ܐܘ {1}",
+            "end": "{0} ܐܘ {1}",
+            "middle": "{0} ܐܘ {1}",
+            "start": "{0} ܐܘ {1}"
         },
         "long": {
-            "2": "{0} ܝܐ {1}",
-            "end": "{0}، ܝܐ {1}"
+            "2": "{0} ܐܘ {1}",
+            "end": "{0} ܐܘ {1}",
+            "middle": "{0} ܐܘ {1}",
+            "start": "{0} ܐܘ {1}"
         },
         "medium": {
-            "2": "{0} ܝܐ {1}",
-            "end": "{0}، ܝܐ {1}"
+            "2": "{0} ܐܘ {1}",
+            "end": "{0} ܐܘ {1}",
+            "middle": "{0} ܐܘ {1}",
+            "start": "{0} ܐܘ {1}"
         },
         "short": {
-            "2": "{0} ܝܐ {1}",
-            "end": "{0}، ܝܐ {1}"
+            "2": "{0} ܐܘ {1}",
+            "end": "{0} ܐܘ {1}",
+            "middle": "{0} ܐܘ {1}",
+            "start": "{0} ܐܘ {1}"
         }
     },
     "standard": {
         "full": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "long": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "medium": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "short": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         }
     },
     "unit": {
         "full": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "long": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "medium": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         },
         "short": {
             "2": "{0} ܘ{1}",
-            "end": "{0}، ܘ{1}"
+            "end": "{0} ܘ{1}",
+            "middle": "{0} ܘ{1}",
+            "start": "{0} ܘ{1}"
         }
     }
 }
