--- a/js/data/locale/vec/list.json
+++ b/js/data/locale/vec/list.json
@@ -2,19 +2,19 @@
     "or": {
         "full": {
             "2": "{0} o {1}",
-            "end": "{0} o {1}"
+            "end": "{0}, o {1}"
         },
         "long": {
             "2": "{0} o {1}",
-            "end": "{0} o {1}"
+            "end": "{0}, o {1}"
         },
         "medium": {
             "2": "{0} o {1}",
-            "end": "{0} o {1}"
+            "end": "{0}, o {1}"
         },
         "short": {
             "2": "{0} o {1}",
-            "end": "{0} o {1}"
+            "end": "{0}, o {1}"
         }
     },
     "standard": {
@@ -29,9 +29,24 @@
         "medium": {
             "2": "{0} e {1}",
             "end": "{0} e {1}"
+        },
+        "short": {
+            "2": "{0} e {1}"
         }
     },
     "unit": {
+        "full": {
+            "2": "{0} e {1}",
+            "end": "{0} e {1}"
+        },
+        "long": {
+            "2": "{0} e {1}",
+            "end": "{0} e {1}"
+        },
+        "medium": {
+            "2": "{0} e {1}",
+            "end": "{0} e {1}"
+        },
         "short": {
             "2": "{0} {1}",
             "end": "{0} {1}",
