--- a/js/data/locale/fo/list.json
+++ b/js/data/locale/fo/list.json
@@ -20,19 +20,15 @@
     "standard": {
         "full": {
             "2": "{0} og {1}",
-            "end": "{0} og {1}"
+            "end": "{0}, og {1}"
         },
         "long": {
             "2": "{0} og {1}",
-            "end": "{0} og {1}"
+            "end": "{0}, og {1}"
         },
         "medium": {
-            "2": "{0} og {1}",
-            "end": "{0} og {1}"
-        },
-        "short": {
-            "2": "{0} og {1}",
-            "end": "{0} og {1}"
+            "2": "{0} & {1}",
+            "end": "{0}, & {1}"
         }
     },
     "unit": {
