--- a/js/data/locale/nl/list.json
+++ b/js/data/locale/nl/list.json
@@ -27,12 +27,8 @@
             "end": "{0} en {1}"
         },
         "medium": {
-            "2": "{0} en {1}",
-            "end": "{0} en {1}"
-        },
-        "short": {
-            "2": "{0} en {1}",
-            "end": "{0} en {1}"
+            "2": "{0} & {1}",
+            "end": "{0} & {1}"
         }
     },
     "unit": {
