Add deleted number style locale to the tool code

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -1,5 +1,34 @@
 {
     "likelyLocales": {
+        "002": "en-Latn-NG",
+        "003": "en-Latn-US",
+        "005": "pt-Latn-BR",
+        "009": "en-Latn-AU",
+        "011": "en-Latn-NG",
+        "013": "es-Latn-MX",
+        "014": "sw-Latn-TZ",
+        "015": "ar-Arab-EG",
+        "017": "sw-Latn-CD",
+        "018": "en-Latn-ZA",
+        "019": "en-Latn-US",
+        "021": "en-Latn-US",
+        "029": "es-Latn-CU",
+        "030": "zh-Hans-CN",
+        "034": "hi-Deva-IN",
+        "035": "id-Latn-ID",
+        "039": "it-Latn-IT",
+        "053": "en-Latn-AU",
+        "054": "en-Latn-PG",
+        "057": "en-Latn-GU",
+        "061": "sm-Latn-WS",
+        "142": "zh-Hans-CN",
+        "143": "uz-Latn-UZ",
+        "145": "ar-Arab-SA",
+        "150": "ru-Cyrl-RU",
+        "151": "ru-Cyrl-RU",
+        "154": "en-Latn-GB",
+        "155": "de-Latn-DE",
+        "202": "en-Latn-NG",
         "419": "es-Latn-419",
         "AC": "en-Latn-AC",
         "AD": "ca-Latn-AD",
