--- a/js/data/locale/ctype.json
+++ b/js/data/locale/ctype.json
@@ -311,6 +311,12 @@
             205743
         ]
     ],
+    "cjk unified ideographs extension i": [
+        [
+            191472,
+            192095
+        ]
+    ],
     "cjkcompatibility": [
         [
             13056,
