--- a/js/data/locale/zoneinfo/America/Ensenada.json
+++ b/js/data/locale/zoneinfo/America/Ensenada.json
@@ -1,18 +1,5 @@
 {
     "c": "MX",
-    "e": {
-        "c": "S",
-        "m": 10,
-        "r": "l0",
-        "t": "2:0"
-    },
-    "f": "P{c}T",
-    "o": "-8:0",
-    "s": {
-        "c": "D",
-        "m": 4,
-        "r": "0>1",
-        "t": "2:0",
-        "v": "1:0"
-    }
+    "f": "PST",
+    "o": "-8:0"
 }
