--- a/js/data/locale/zoneinfo/America/Monterrey.json
+++ b/js/data/locale/zoneinfo/America/Monterrey.json
@@ -1,19 +1,6 @@
 {
     "c": "MX",
-    "e": {
-        "c": "S",
-        "m": 10,
-        "r": "l0",
-        "t": "2:0"
-    },
-    "f": "C{c}T",
+    "f": "CST",
     "n": "Central {c} Time (Mexico)",
-    "o": "-6:0",
-    "s": {
-        "c": "D",
-        "m": 4,
-        "r": "0>1",
-        "t": "2:0",
-        "v": "1:0"
-    }
+    "o": "-6:0"
 }
